[tool.poetry]
name = "abilia.com-graphql"
version = "0.1.0"
authors = ["Stefane Fermigier"]
description = ""

[tool.poetry.dependencies]
python = "*"

flask = "*"
bleach = "*"
flask-assets = "*"
flask-babel = "*"
flask-flatpages = "*"
flask-markdown = "*"
frozen-flask = "*"
gunicorn = "*"
pillow = "*"
babel = "^2.7"

#abilian-core = "==0.1.4"

[tool.poetry.dev-dependencies]
#ansible = "*"
#argh = "==0.23.1"
#argparse = "==1.2.1"
#closure = "==20121212"
#cssmin = "==0.2.0"
#distribute = "*"
#fabric = "==1.6.0"
#fabtools = "==0.9.4"
#html5lib = "==0.999"
#jinja2 = "==2.6"
#jsmin = "==2.0.2-1"
#markdown = "==2.3.1"
#markupsafe = "==0.18"
#paramiko = "==1.10.0"
#pycrypto = "==2.6"
#pytz = "==2012j"
#pyyaml = "==3.10"
#raven = "==3.1.11"
#six = "==1.5.2"
#speaklater = "==1.3"
#ssh = "==1.8.0"
#webassets = "==0.8"
#werkzeug = "==0.8.3"
#wsgiref = "==0.1.2"
pytest = "^4.6"
pytest-cov = "^2.7"
