# PBR
[metadata]
name=abilian.com
version=1.0
url=http://abilian.com/
license=LGPL
author=Abilian SAS
author_email=contact@abilian.com
description=The website for Abilian.

platforms=any
classifier =
    'Development Status :: 3 - Alpha'
    'Environment :: Web Environment'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)'
    'Operating System :: OS Independent'
    'Programming Language :: Python'
    'Framework :: Flask'

[files]
packages=website
include_package_data=True
zip_safe=False


# babel
[extract_messages]
mapping_file = etc/babel.cfg
keywords = _n:1,2 _l
output-file = messages.pot
input-dirs = abilian

[update_catalog]
input-file = messages.pot
output-dir = abilian/translations

[compile_catalog]
directory = abilian/translations

[init_catalog]
input-file = messages.pot
output-dir = abilian/translations


# Testing and QA
[tool:pytest]
python_files = test*.py
addopts = --tb=short

[flake8]
ignore = E111,E114,E121,E201,E202,E225,E501


# Formatting
[isort]
multi_line_output=2
